examples/valid/while/whileTrue.wacc
# simple infinite while loop
# Output
# looping...
# looping...
# looping...
# looping...
# #forever#

#Program:#

begin
  while true do
    println "looping..."
  done ; 
  println "end of loop"
end
