examples/invalid/syntaxErr/while/whileNodo.wacc
# while missing opening do
# Output:
# #syntax error#

#Program:#

begin
  while false
    skip
  done
end
